--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -4,10 +4,7 @@
 		<!-- Don't show any update elements -->
     	<!-- Useful for Linux packagers who need control over updates -->
         <add key="ShowUpdate" value="false" />
-    	<!-- If true the program will allow the use of custom gtkrc files -->
-    	<!-- Many developers feel a program should not interfere with a users themes -->
-		<add key="AllowCustomTheme" value="false" />
-		<!-- Used for debugging -->
-		<add key="UseDebug" value="false"/>
+    	<!-- Used for debugging -->
+		<add key="Debug" value="true"/>
     </appSettings>
 </configuration>
