--- a/SoftwareUpdate/GUPdotNET/StandAlone/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/StandAlone/src/GUPdotNET.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -17,7 +17,7 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <ApplicationIcon>images\update_large.ico</ApplicationIcon>
     <Description>General Purpose Update program for Mono/Gtk#.</Description>
-    <StartArguments>"C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\GUPdotNET_EXE\src_testapp\testapp\bin\Debug" </StartArguments>
+    <StartArguments>"C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\GUPdotNET_EXE\src_testapp\testapp\bin\Debug"  "options"</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
