--- a/SoftwareUpdate/GUPdotNET/StandAlone/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/StandAlone/src/GUPdotNET.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -76,8 +76,6 @@
     <Compile Include="Common\Const.cs" />
     <Compile Include="Common\Options.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MainWindow.cs" />
-    <Compile Include="gtk-gui\GUPdotNET.MainWindow.cs" />
     <Compile Include="UpdateInfo.cs" />
     <EmbeddedResource Include="images\update_large.png">
       <LogicalName>update_large.png</LogicalName>
