--- a/SoftwareUpdate/GUPdotNET/StandAlone/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/StandAlone/src/GUPdotNET.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -68,8 +68,6 @@
     <Compile Include="Main.cs" />
     <Compile Include="frmConfirm.cs" />
     <Compile Include="gtk-gui\GUPdotNET.frmConfirm.cs" />
-    <Compile Include="frmDownload.cs" />
-    <Compile Include="gtk-gui\GUPdotNET.frmDownload.cs" />
     <Compile Include="frmInstall.cs" />
     <Compile Include="Common\Common.cs" />
     <Compile Include="Common\Const.cs" />
@@ -102,11 +100,13 @@
     <Compile Include="gtk-gui\GUPdotNET.frmInstall.cs" />
     <Compile Include="frmOptions.cs" />
     <Compile Include="gtk-gui\GUPdotNET.frmOptions.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
     <Content Include="app.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Compile Include="frmDownload.cs" />
+    <Compile Include="gtk-gui\GUPdotNET.frmDownload.cs" />
+    <EmbeddedResource Include="images\cancel.png" />
+    <EmbeddedResource Include="images\hide.png" />
   </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
