--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -6,5 +6,8 @@
         <add key="ShowUpdate" value="false" />
     	<!-- Used for debugging -->
 		<add key="Debug" value="true"/>
+		<!-- the file formate to save the options, metainfo, etc -->
+		<!-- Excpected file types are xml or dat -->
+		<add key="UserFileFormat" value="xml"/>
     </appSettings>
 </configuration>
