--- a/BloodPressureMonitor/MonoBPMonitor/installer/DependencyCheck.ini
+++ b/BloodPressureMonitor/MonoBPMonitor/installer/DependencyCheck.ini
@@ -5,11 +5,11 @@ Title=Checking for Dependencies
 
 [Field 1]
 Type=Label
-Text=Checking computer for .NET and Gtk# versions.
+Text=Checking computer for .NET and Gtk# dependencies.
 Left=95
-Right=247
-Top=19
-Bottom=27
+Right=296
+Top=20
+Bottom=28
 
 [Field 2]
 Type=Label
@@ -74,3 +74,4 @@ Left=115
 Right=151
 Top=78
 Bottom=86
+
