--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -3,7 +3,7 @@
 	<appSettings>
 		<!-- Don't show any update elements -->
     	<!-- Useful for Linux packagers who need control over updates -->
-        <add key="ShowUpdate" value="false" />
+        <add key="ShowUpdate" value="true" />
     	<!-- Used for debugging -->
 		<add key="Debug" value="true"/>
 		<!-- the file formate to save the options, metainfo, etc -->
