--- a/UtilityTools/MonoPad/src/MonoPad/MonoPad.csproj
+++ b/UtilityTools/MonoPad/src/MonoPad/MonoPad.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -108,6 +108,7 @@
     <Compile Include="Common\EnviromentData.cs" />
     <Compile Include="Common\Options.cs" />
     <Compile Include="Editor\BufferTags.cs" />
+    <Compile Include="Editor\EditorTagTable.cs" />
     <Compile Include="Editor\MonoPadEditor.cs" />
     <None Include="app.config" />
     <EmbeddedResource Include="images\rich_text.png">
@@ -115,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="images\simple_text.png">
       <LogicalName>simple_text.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="images\edit-clear.png">
+      <LogicalName>edit-clear.png</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
