--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/app.config
@@ -4,10 +4,11 @@
 		<!-- Don't show any update elements -->
     	<!-- Useful for Linux packagers who need control over updates -->
         <add key="ShowUpdate" value="true" />
+		<!-- For Windows where there is not Gtk Theme installed -->
+    	<!-- Allows the setting of custome themes in Windows enviroments -->
+    	<!-- Not Intended for use with Linux -->
+        <add key="AllowCustomTheme" value="true" />
     	<!-- Used for debugging -->
 		<add key="Debug" value="true"/>
-		<!-- the file formate to save the options, metainfo, etc -->
-		<!-- Excpected file types are xml or dat -->
-		<add key="UserFileFormat" value="xml"/>
     </appSettings>
 </configuration>
