--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/GUPdotNET/GUPdotNET.exe.config
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/GUPdotNET/GUPdotNET.exe.config
@@ -7,9 +7,9 @@
 		
 		<!-- BEGIN GUPdotNET AREA -->
 		<!-- the name of the program as recognized by it's process -->
-		<add key="ProgramName" value="MonoBPMonitor"/>
+		<add key="ProgramName" value="YahtzeeSharp"/>
 		<!-- The Generic Name/Title of the calling program -->
-		<add key="ProgramTitle" value="Mono Blood Pressure Monitor" />
+		<add key="ProgramTitle" value="Yahtzee Sharp" />
 		
 		<!-- 
 			The Operating System We Are Updating 
@@ -23,7 +23,7 @@
 		<add key="InstallType" value="Installer" />
 		
 		<!-- The URL of the web site that contains the update information -->
-		<add key="UpdateInfoURL" value="http://brdstudio.net/MBPMonitor/GetUpdateInfo.asp" />
+		<add key="UpdateInfoURL" value="http://brdstudio.net/gupdotnet/GetUpdateInfo.asp" />
 		
 		<!-- Logging Enable -->
 		<add key="SaveUpdateLog" value="true" />
