--- a/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/MonoBPMonitor.csproj
+++ b/BloodPressureMonitor/MonoBPMonitor/src/MonoBPMonitor/MonoBPMonitor.csproj
@@ -170,12 +170,24 @@
     <Content Include="app.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="GUPdotNET\GetUpdateInfo.asp" />
-    <None Include="GUPdotNET\GUPdotNET.exe" />
-    <None Include="GUPdotNET\GUPdotNET.exe.config" />
-    <None Include="GUPdotNET\GUPdotNET.exe.mdb" />
-    <None Include="GUPdotNET\GUPdotNET.pdb" />
-    <None Include="GUPdotNET\TimeValues.xml" />
+    <Content Include="GUPdotNET\GetUpdateInfo.asp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GUPdotNET\GUPdotNET.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GUPdotNET\GUPdotNET.exe.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GUPdotNET\GUPdotNET.exe.mdb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GUPdotNET\GUPdotNET.pdb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="GUPdotNET\TimeValues.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Reports\MainEntry\Description.txt" />
     <Compile Include="Doctors\DoctorRendererCombo.cs" />
     <Compile Include="Reports\MainEntry\EntryTreeView.Designer.cs" />
