--- a/SoftwareUpdate/GUPdotNET/src/app.config
+++ b/SoftwareUpdate/GUPdotNET/src/app.config
@@ -4,12 +4,24 @@
 		
 		<!-- For Debugging -->
 		<add key="Debug" value="true"/>
-		
+		<!-- 
+			Used to override the version information 
+			Can be used for testing or if static numbers are prefered
+			to the version info gotten from the calling assembly
+ 		-->
+		<add key="MajorVersion" value="0" />
+		<add key="MinorVersion" value="1" />		
+		<!-- 
+			Used to override the calling assembly path information 
+			Can be used for testing when there is no calling assembly
+ 		
+		<add key="ProgramFullPath" value="" />
+		-->
 		<!-- BEGIN GUPdotNET AREA -->
 		<!-- the name of the program as recognized by it's process -->
-		<add key="ProgramName" value="YahtzeeSharp"/>
+		<add key="ProgramName" value="MonoBPMonitor"/>
 		<!-- The Generic Name/Title of the calling program -->
-		<add key="ProgramTitle" value="Yahtzee Sharp" />
+		<add key="ProgramTitle" value="Mono Blood Pressure Monitor" />
 		
 		<!-- 
 			The Operating System We Are Updating 
@@ -23,7 +35,7 @@
 		<add key="InstallType" value="Installer" />
 		
 		<!-- The URL of the web site that contains the update information -->
-		<add key="UpdateInfoURL" value="http://brdstudio.net/gupdotnet/GetUpdateInfo.asp" />
+		<add key="UpdateInfoURL" value="http://brdstudio.net/MBPMonitor/GetUpdateInfo.asp" />
 		
 		<!-- Logging Enable -->
 		<add key="SaveUpdateLog" value="true" />
