--- a/SoftwareUpdate/GUPdotNET/src/app.config
+++ b/SoftwareUpdate/GUPdotNET/src/app.config
@@ -14,9 +14,9 @@
 		<!-- 
 			Used to override the calling assembly path information 
 			Can be used for testing when there is no calling assembly
- 		
-		<add key="ProgramFullPath" value="" />
-		-->
+ 		-->
+		<add key="ProgramFullPath" value="C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\MonoBPMonitor\src\MonoBPMonitor\bin\Debug\MonoBPMonitor.exe" />
+		
 		<!-- BEGIN GUPdotNET AREA -->
 		<!-- the name of the program as recognized by it's process -->
 		<add key="ProgramName" value="MonoBPMonitor"/>
