--- a/SoftwareUpdate/GUPdotNET/src/GUPdotNET.csproj
+++ b/SoftwareUpdate/GUPdotNET/src/GUPdotNET.csproj
@@ -17,7 +17,7 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <ApplicationIcon>images\update_large.ico</ApplicationIcon>
     <Description>General Purpose Update program for Mono/Gtk#.</Description>
-    <StartArguments>"ShowOptions=false" "ThemeFile=C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\MonoBPMonitor\src\MonoBPMonitor\bin\Debug\Themes\Neutrino\gtk-2.0\gtkrc" </StartArguments>
+    <StartArguments>"ShowOptions=true" "ThemeFile=C:\Documents and Settings\ayork\My Documents\SharpDevelop Projects\MonoBPMonitor\src\MonoBPMonitor\bin\Debug\Themes\Neutrino\gtk-2.0\gtkrc" </StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
